style(docs): ensure ext link icon is visible and has margins

--- a/styles/external-link.scss
+++ b/styles/external-link.scss
@@ -4,13 +4,18 @@
 
 .external-link::after,
 .external-link-icon::after {
+    @apply inline-block p-0.5;
     content: "";
-    display: inline-block;
-    padding: 1px;
+    margin-left: 0.25rem;
     width: 11px;
     height: 11px;
     background: var(--external-link-icon-color);
     flex-shrink: 0;
     -webkit-mask-image: var(--external-link-icon);
     mask-image: var(--external-link-icon);
+}
+
+.external-link-icon [vp-content] a[href*="://"]:not(.no-external-link-icon)::after,
+.external-link-icon [vp-content] a[target=_blank]:not(.no-external-link-icon)::after {
+    @apply p-0.5;
 }
